# game-agent

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/api/: pyproject.toml
apps/api/app/: main.py
apps/api/app/agents/: __init__.py  graph.py  llm.py  nodes.py  state.py
apps/api/app/api/: deps.py
apps/api/app/api/routes/: assets.py  auth.py  games.py  generation_tasks.py  health.py  telemetry.py
apps/api/app/core/: config.py  constants.py  database.py  request_id.py  security.py  storage.py
apps/api/app/db/: schema_upgrade.py  seed.py
apps/api/app/models/: __init__.py  asset.py  game.py  generation_task.py  oauth_account.py  telemetry.py  user.py
apps/api/app/schemas/: asset.py  auth.py  game.py  game_spec.py  generated_bundle.py  manifest.py  task.py  telemetry.py
apps/api/app/services/: generation_pipeline.py
apps/api/tests/: test_agents.py  test_assets.py  test_config.py  test_generation_tasks.py  test_oauth.py  test_observability.py
apps/web/: index.html  package.json  tailwind.config.js  vite.config.ts
apps/web/src/: App.vue  main.ts  styles.css
apps/web/src/api/: assets.ts  auth.ts  client.ts  games.ts  tasks.ts  telemetry.ts  types.ts
apps/web/src/data/: showcase.ts
apps/web/src/pages/: CreatePage.vue  HomePage.vue  LoginPage.vue  PlayPage.vue  RegisterPage.vue
apps/web/src/router/: index.ts
apps/web/src/stores/: auth.ts  createTask.ts
docs/: architecture.md  delivery.md  demo-assets.md  demo-checklist.md  runtime-protocol.md  需求文档.md
docs/prompt/: game.txt
(+17 files in other folders)
