[project]
name = "game-agent-api"
version = "0.1.0"
description = "FastAPI backend for PromptPlay AI"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.17.2",
  "bcrypt>=5.0.0",
  "email-validator>=2.3.0",
  "fastapi[standard]>=0.124.0",
  "jinja2>=3.1.6",
  "langgraph>=1.0.4",
  "minio>=7.2.20",
  "pydantic-settings>=2.12.0",
  "pymysql>=1.1.2",
  "python-jose[cryptography]>=3.5.0",
  "python-multipart>=0.0.20",
  "sqlalchemy>=2.0.45",
]

[dependency-groups]
dev = [
  "pytest>=9.0.2",
  "ruff>=0.14.9",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
